--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
+module:
+  imports:
+    - path: "github.com/willfaught/paige"
+
 baseurl: "https://sparselabs.org"
 copyright: "Sparse Labs Inc."
 enablerobotstxt: true
